codegen: unique constraint naming fix